crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__replace_constraint__tests__replace_fk_on_update@replace_fk_on_update_Postgres.snap
---
source: crates/vespertide-query/src/sql/replace_constraint.rs
description: replace FK on_update for Postgres
---
ALTER TABLE "posts" DROP CONSTRAINT "fk_user";
ALTER TABLE "posts" ADD CONSTRAINT "fk_user" FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON UPDATE CASCADE
