crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__replace_constraint__tests__replace_unique_constraint@replace_unique_MySql.snap
---
source: crates/vespertide-query/src/sql/replace_constraint.rs
description: replace unique constraint for MySql
---
ALTER TABLE `users` DROP INDEX `uq_email`;
CREATE UNIQUE INDEX `uq_email_new` ON `users` (`email`)
