crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__replace_constraint__tests__replace_unique_constraint@replace_unique_Sqlite.snap
---
source: crates/vespertide-query/src/sql/replace_constraint.rs
description: replace unique constraint for Sqlite
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "email" text NOT NULL, PRIMARY KEY ("id") );
INSERT INTO "users_temp" ("id", "email") SELECT "id", "email" FROM "users";
DROP TABLE "users";
ALTER TABLE "users_temp" RENAME TO "users";
CREATE UNIQUE INDEX "uq_email" ON "users" ("email")
